--- a/vercel.json
+++ b/vercel.json
@@ -10,8 +10,18 @@
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "https://your-railway-backend-url.railway.app/api/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
