--- a/vercel.json
+++ b/vercel.json
@@ -8,17 +8,11 @@
       }
     }
   ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "https://vue-landing-page-production.railway.app/api/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ],
   "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "https://vue-landing-page-production.railway.app/api/$1"
+    },
     {
       "source": "/(.*)",
       "destination": "/index.html"
